--- a/packages/ui/src/style.css
+++ b/packages/ui/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
+
 @import "tailwindcss";
 
 @plugin "tailwindcss-animate";
@@ -78,6 +80,7 @@
   --color-chart-3: var(--chart-3);
   --color-chart-4: var(--chart-4);
   --color-chart-5: var(--chart-5);
+  --radius-xs: calc(var(--radius) - 6px);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -88,7 +91,13 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    font-family: 'Readex Pro', sans-serif;
+  }
   body {
     @apply bg-background text-foreground;
+    button, [role='button'] {
+      cursor: pointer;
+    }
   }
 }
